stylesheets/style.css
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.page-title {
    text-align: center;
}

.main-template {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1em;
    color: white;
    background-color: #006CB6;
}

.main-template > section {
    background-color: #F8C706;
    color: black;
}

.main-template > header {
    background-color: #D01114;

}

/**
 * Header styles
 */

header {
    display: flex;
    margin: 5px;
    padding: 20px;
    height: 200px;
}

#parkLogoDiv .park-logo-img {
    width: 200px;
    height: 200px;
}

#parkTitlesDiv {
    flex: 1;
    text-align: center;
    width: 80%;
    color: white;
}

#parkTitlesDiv h1 {
    margin-top: 0px;
    margin-bottom: 20px;
}

#parkTitlesDiv h2 {
    margin-top: 0px;
    margin-bottom: 0px;
}

#highlights {
    text-align: center;
    padding: 50px;
}

/**
 * CTA section styles
 */
section.no-background {
    background-color: unset;
    /* margin: 10px;
    padding: 0; */
}

.page-links ul {
   text-align: center;
}

.page-links ul li {
    display: inline-block;
    margin-top: 20px;
    margin-bottom: 20px;
    width: 48%;
    margin-left: auto;
    margin-right: auto;
    background-color: #D01114;
    padding: 5px;
    text-align: center;
    /* text-align: center; */

    /* Need the animation back from hover */
    transition: background-color 500ms ease;
}

/* Want the book now buttons to activate on hover. NIce smooth animation to
highlight to the user it is an element they can interact with

Cant seem to have scale and the shake animation at the same time. Not necessarily a bad
thing as it may be too much*/
.page-links ul li:hover {
    background-color: #109710;
    /* transform: scale(2); */
    /* scale needs fixing */
    transition: background-color 500ms ease;
    /* transition-delay: 500ms ease; */
    /* shake animation */
    animation: shake 1s;
    animation-iteration-count: infinite;
}

.page-links ul li a {
    color: white;
    font-size: 2em;
    text-decoration: none;
    /* display: block;
    padding: 40px;
    width: 100%;
    height: 100%; */
}

/**
 * Events styles
 */
#events {
    height: 553px;
    overflow: hidden;
    margin-bottom: 20px;
}

#main-event {
    height: 100%;
    float: left;
    width: 50%;
    position: relative;
}

#secondary-events {
    float: right;
    width: 50%;
    position: relative;
    height: 100%;
    overflow: hidden;
}

#secondary-events div.event-container {
    position: relative;
    height: 50%;
}

.event-description {
    /* position: absolute;
    color: white;
    bottom: 20px;
    right: 60px; */
}

/**
 * CTA Book now styles
 */

#bookNow-link li {

    display: inline-block;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 85px;
    margin-right: 85px;
    height: 85%;
    width: 85%;
    background-color: #D01114;
    text-align: center;
}

#bookNow-link2 li {

    display: inline-block;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 85px;
    margin-right: 85px;
    height: 85%;
    width: 85%;
    background-color: #D01114;
    text-align: center;
}

.bookNow-link p a {
    color: white;
    /* font-size: 2em; */
    text-decoration: none;
    /* display: block;
    padding: 40px;
    width: 100%;
    height: 100%; */
}

/**
 * Rides styles
 */
#rides {
    /* height: 600px; */
    color: white;
}

#rides h2 {
    padding-top: 30px;
    padding-bottom: 30px;
    text-align: center;
}

#main-ride {
    width: 100%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

#other-rides ul li {
    display: inline-block;
    padding: 35px;
    position: relative;
    top: 80px;
    right: 10px;
    left: 100px;
    margin-bottom: 100px;
    width: 40%;
    height: 20%;

}

.park-logo-img {
    /* height: 100px !important;
    width: 100px !important; */
}

.title-div > p:nth-child(odd) {
    /* background-color: #e68301; */
    color: black;
    /* font-size: 16pt; */
}

.title-div > p:nth-child(even) {
    background-color: #109710;
    color: white;
    /* font-size: 15pt; */
}

.main-offer-image {
    /* width: 50% !important */
}

.sub-offer-image {
    /* width: 25% !important */
}

li {
    font-size: 1em;

}

.ticket-image {
    /* display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%; */
}

.ticket-type {
    
}

.social-media-links > span {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 25%;
    padding: 5px;

}

/* animation to make the currently hovered social media pop slightly */
/* .social-media-links-animation {
    transition: transform 500ms ease;
}

.social-media-links-animation:hover {
    transform: translate(0px,-25px);
    transition: transform 500ms ease;
} */

.social-media-links > span a img {
    transition: transform 500ms ease;
}

.social-media-links > span a img:hover {
    transform: translate(0px, -25px);
    transition: transform 500ms ease;
}

.ticket-image {
    /* height: auto;
    width: auto; */
}

.hotel-image {
    /* width: 50% !important */
}

.restaurant-image {
    /* width: 50% !important */
}

h1 {
    font-family: 'Architects Daughter', cursive;
    font-weight: normal;
    font-size: 4.5em;
    color: white;
}

h2 {
    font-family: 'Architects Daughter', cursive;
    font-size: 3em;
    color: white;
}

h3 {
    font-family: 'Architects Daughter', cursive;
    font-size: 2em;
    color: white;
}

h4 {
    font-family: 'Architects Daughter', cursive;
    font-size: 1.5em;
    color: white;
}

.text-over-image {
    margin: 1px;
    position: relative;
}

.text-over-image img {
    width: 100%;
    height: 100%;
    transition: 250ms;
}

.text-over-image :not(img) {
    position: absolute;
    top: 20% !important;
    z-index: 1;
    text-align: center;
    color: white;
    opacity: 0;
    transition: 250ms;
}

.text-over-image h3 {
    width: 100%;
}

.text-over-image h2 {
    width: 100%;
}

.text-over-image p {
    top: 60% !important;
    padding-left: 40px;
    padding-right: 40px;
}

.text-over-image:hover img {
    filter: blur(3px) brightness(40%);
    transition: 250ms;
}

.text-over-image h3 {
    top: 50%;
}

.text-over-image:hover :not(img) {
    opacity: 1;
    transition: 250ms;
}

/* Kayframes for the shake animation */
@keyframes shake {
    0% {
        transform: translate(1px, 1px) rotate(0deg);
    }
    10% {
        transform: translate(-1px, -2px) rotate(-1deg);
    }
    20% {
        transform: translate(-3px, 0px) rotate(1deg);
    }
    30% {
        transform: translate(3px, 2px) rotate(0deg);
    }
    40% {
        transform: translate(1px, -1px) rotate(1deg);
    }
    50% {
        transform: translate(-1px, 2px) rotate(-1deg);
    }
    60% {
        transform: translate(-3px, 1px) rotate(0deg);
    }
    70% {
        transform: translate(3px, 1px) rotate(-1deg);
    }
    80% {
        transform: translate(-1px, -1px) rotate(1deg);
    }
    90% {
        transform: translate(1px, 2px) rotate(0deg);
    }
    100% {
        transform: translate(1px, -2px) rotate(-1deg);
    }
}

#socialMediaLinksDiv {
    text-align: center;
    background-color: #F8C706;
    margin-top: 10px;
    margin-bottom: 40px;
}

#themeParkMap {
    text-align: center
}

#accomodation {
    text-align: center;
    margin: 10px;
    padding: 10px;
}

#dining {
    text-align: center;
    margin: 10px;
    padding: 10px;
}

#specialOffersDiv {
    text-align: center;
}

#ticketdescriptions {
    display: flex;
    padding: 5px;
    margin-top: 20px;
    margin-bottom: auto;
    margin-right: auto;
    text-align: center;
    align-content: center;

}

#tblOne {
    flex: 1;
    height: auto;
    width: 300px;
    display: inline-block;
    background-color: #F8C706;
    margin-left: 5px;
    margin-right: 5px;
    border: white;
    border-style: dashed;
    border-width: 4px;
}


#tblTwo {
    flex: 1;
    height: auto;
    width: 300px;
    display: inline-block;
    background-color: #006CB6;
    margin-left: 5px;
    margin-right: 5px;
    border: white;
    border-style: dashed;
    border-width: 4px;
}

#tblThree {
    flex: 1;
    height: auto;
    width: 300px;
    display: inline-block;
    background-color: #F8C706;
    margin-left: 5px;
    margin-right: 5px;
    border: white;
    border-style: dashed;
    border-width: 4px;
}

#ticketdescriptions ul {
    margin: 0px;
    padding: 0px;
}

#ticketdescriptions li {
color: white;
}

/**
 * Footer styling
 */

footer section {
    width: 30%;
    display: inline-block;
    padding: 10px;
    margin: 10px;
    text-align: center;
    border: white;
    border-style: dashed;
    border-width: 4px;
    height: 180px;
    text-transform: uppercase;
    overflow: hidden;
}

footer section h3 {
    margin-top: 10px;
    margin-bottom: 10px;
}

footer section ul {
    padding-inline-start: 0px;
}

footer section ul li {
    padding-bottom: 20px;
}

footer section ul li a {
    font-weight: bold;
    color: white;
}

.slideshow-container {
    max-width: 100%;
    position: relative;
    margin: auto;
    height: 625px !important;
}

.mySlides {
    display: none;
    height: 400px;
}

.mySlides img {
    max-width: 100%;
    max-height: auto;
    height: 600px !important;
    width: auto !important;
    /* position: relative; */
}

  /* The dots/bullets/indicators */
  .dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
  }

  .active, .dot:hover {
    background-color: #717171;
  }

  /* Fading animation */
  .fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
  }

  @-webkit-keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
  }

  @keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
  }

/*
 * Override social media span block to
 */
footer .social-media-links > span {
    display: inline-block;
    width: 100%;
}

